...
      child: ref
          .watch(conditionQueryProvider)
          .maybeWhen(
            orElse: () => const CupertinoActivityIndicator(),
            data:
                (query) => Semantics(
                  identifier: 'conditionPageList',
                  child: ConditionPageList(
                    query,
                    onItemDisplayed: (value) {
                      final createdAt = value.createdAt?.toDate();
                      if (createdAt != null) {
                        if (DateUtils.isSameDay(clock.now(), createdAt)) {
...
