...
        children: [
          const _Terms(),
          const Gap(12),
          FractionallySizedBox(
            widthFactor: 1,
            child: Semantics(
              identifier: 'continueButton',
              label: i18n.kContinue,
              button: true,
              child: CupertinoButton.filled(
                child:
                    progress.value
                        ? CupertinoActivityIndicator(
...
