...
            ),
          ),
          Padding(
            padding: const EdgeInsets.symmetric(horizontal: 20),
            child: Semantics(
              button: true,
              identifier: 'understoodButton',
              child: CupertinoButton(
                color: CupertinoColors.systemRed.resolveFrom(context),
                child: Text(
                  i18n.disclaimer.understood,
                  style: CupertinoTheme.of(
                    context,
...
